[2단계] 로또 수동 구현 (#142)
* docs: update README requirements, structure, and plans

* chore: create package structure and base classes

* docs: refine implementation plan order

* feat: implement lotto number generation

* refactor: rename class
- LottoNumbers->Lotto
- LottoTicket->Lottos

* feat: implement lotto purchase

* feat: implement winning numbers

* feat: implement lotto result calculation with statistics

* feat: implement controller and I/O view

* feat: implement lotto machine

* feat: implement lotto number

* docs: update README

* refactor: use lotto number pool in factory

* refactor: clarify lotto number range error message

* refactor: clarify lotto size error message

* chore: add numeric separators

* refactor: move match logic into WinningNumbers

* fix: add guard for zero purchase amount

* refactor: move lotto number creation to controller

* refactor: clarify lotto factory naming

* chore: use method reference for null checks

* refactor: implement lotto generator

* refactor: fix static factory naming

* test: normalize DisplayName

* chore: remove unused import

* refactor: merge lotto generator into lotto machine

* feat: implement manual lotto

* feat: add lotto exception

* refactor: exception handling in main application

* refactor: use map in lotto number pool

* refactor: sort method

* refactor: lottomachine as a composite of generators

* refactor: use `Lotto.requiredSize()`

* refactor: remove `sort` method

* refactor: use standard exceptions

* refactor: use standard exceptions

* refactor: use hashmap instead of linked hashmap

* refactor: controller input loop

* refactor: lotto constructor

* refactor: add lotto generator factory

* refactor: add lotto generator factory

---------

Co-authored-by: kyle4293 <chang4293@gmail.com>